fixed button and admin visibility issue

--- a/html5-boilerplate/css/inwestuj-w-firmy.css
+++ b/html5-boilerplate/css/inwestuj-w-firmy.css
@@ -2805,9 +2805,7 @@ color: #fff;
     /*text-decoration:none;
     color:#FFFFFF;
     */
-    background:#7EDAEF;
-    background-image:url('../img/gradient.png');
-    background-repeat:repeat-x;
+    background-color: rgba(126, 218, 239, 0.5);
 }
 .blueboxbutton {
     display: block;
